inventory_management_micro/deploy/inventory_management_service.yml
apiVersion: v1
kind: Service
metadata:
  name: inventory-management-service
  namespace: logistics
  labels:
    app: inventory-management
spec:
  selector:
    app: inventory-management
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
